--- a/client/src/components/styles/myshelf.css
+++ b/client/src/components/styles/myshelf.css
@@ -6,8 +6,8 @@
     align-items: center;
 }
 .cards {
-    min-width: 30vw;
-    max-width: 30vw;
+    min-width: 30vh;
+    /*max-width: 30vh;*/
     margin: 1em;
     display: inline-block;
 }
